this is p1 coach

--- a/p1.html
+++ b/p1.html
@@ -7,7 +7,8 @@
 </head>
 <body>
      <h1>Registration form!</h1>
-    <form border ="45" >
+     <fieldset>
+    <form > 
         <h3 >Personal Details</h3>
         <hr>
 <label for="fname">first name:</label>
@@ -33,5 +34,6 @@
 <br><br><br>
 <input type="submit" value="Sign up">
 </form>
+</fieldset>
 </body>
 </html>
